--- a/index.html
+++ b/index.html
@@ -40,26 +40,26 @@
 <div class="container2">
   <div class="summary-header"><h3>Summary</h3></div>
   <div class="reaction">
-  <img src="./assets/images/icon-reaction.svg"alt="Icon Reaction"/>
+  <img src="./icon-reaction.svg"alt="Icon Reaction"/>
   <p id="reaction-p">Reaction</p>
   <p  id="score">80</p>
   <p  id="max-score">/ 100</p>
 </div>
 <div class="memory">
-  <img src="./assets/images/icon-memory.svg"alt="Icon Memory"/>
+  <img src="./icon-memory.svg"alt="Icon Memory"/>
   <p id="memory-p">Memory</p>
   <p id="score">92 </p>
   <p id="max-score">/ 100</p>
 </div>
 
   <div class="verbal">
-    <img src="./assets/images/icon-verbal.svg"alt="Icon Verbal"/>
+    <img src="./icon-verbal.svg"alt="Icon Verbal"/>
   <p id="verbal-p">Verbal</p>
   <p id="score">61 </p>
   <p id="max-score">/ 100</p>
 </div>
   <div class="visual">
-    <img src="./assets/images/icon-visual.svg"alt="Icon Visual"/>
+    <img src="./icon-visual.svg"alt="Icon Visual"/>
   <p id="visual-p">Visual</p>
  <p id="score"> 72 </p>
  <p id="max-score">/ 100</p>
